--- a/src/app/components/create-task/create-task.component.html
+++ b/src/app/components/create-task/create-task.component.html
@@ -25,9 +25,9 @@
               id="sel1"
               style="border-color: transparent; box-shadow: none;"
               name="list"
-              [ngModel]= "this.taskId != null ? taskToUpdate.list : ''"
+              ngModel
             >
-              <option [value]="list.id" *ngFor="let list of lists" >{{
+              <option [value]="list._id" *ngFor="let list of lists" >{{
                 list.title
               }}</option>
             </select>
@@ -73,7 +73,7 @@
                   [ngModel] = ""
                   #checkbox
                   class="badgebox"
-                  (change)="addLabel(label.id)"
+                  (change)="addLabel(label._id)"
                 />
                 <span class="badge">&#10003;</span>
               </label>
