--- a/src/app/components/group-members/group-members.component.html
+++ b/src/app/components/group-members/group-members.component.html
@@ -1,6 +1,6 @@
 <div class="bs-example widget-shadow task-card-container col-md-9" data-example-id="contextual-table">
   <h4 style="display: inline">Group</h4>
-  <span class="pull-right"><button class="btn btn-info">Invite</button></span>
+  <span class="pull-right"><a [routerLink]="['/addmembers', groupId]" routerLinkActive="router-link-active"  class="btn btn-info">Add Members</a></span>
   <table class="table table-borderless table-hover">
     <thead>
       <tr>
@@ -13,7 +13,7 @@
         <td class="task-row" >
           <span class="user-icon-span label-default" ><i style="color:white" class="glyphicon glyphicon-user"></i></span>
           <span style="margin-left: 10px;">{{member.name}}</span>
-
+          
           <span  class="label pull-right" (click)="editTask(task.id)" style="color:#bbb"
             ><i class="glyphicon glyphicon-remove-circle"></i
           ></span>
@@ -24,7 +24,7 @@
 
     </tbody>
     <p *ngIf = "members.length <= 0">
-      No Member
+      No Members
     </p>
   </table>
 </div>
