authentication guard for group access deletion of tasks in a group resolved issues with updating tasks searching tasks

--- a/src/app/components/request/request.component.html
+++ b/src/app/components/request/request.component.html
@@ -18,7 +18,7 @@
             <span class="label label-default" style="margin-left: 5px;">{{request.group}}</span>
             <span class="pull-right">
               <button (click) = "acceptRequest(request._id, request.groupId)"  class="btn btn-success btn-sm">Accept</button>
-              <button (click) = "deleteRequest(request._id)"  class="btn btn-warning btn-sm">Reject</button>
+              <button (click) = "deleteRequest(request)"  class="btn btn-warning btn-sm">Reject</button>
             </span>
           </td>
   
