--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -95,7 +95,7 @@
     <div class="profile_details" >
       <ul>
         <li class="dropdown profile_details_drop">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <div class="profile_img">
               <span class="prfil-img"><img src="" alt=""> </span>
               <div class="user-name" >
