--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -65,7 +65,7 @@
       </form>
       <div class="w3layouts_more-buttn" style="margin-top:70px">
         <h3>
-          Don't have an account?
+          Already have an account?
           <a [routerLink]="['/login']" routerLinkActive="router-link-active"
             >Login Here
           </a>
